--- a/hazelcast/datadog_checks/hazelcast/data/metrics.yaml
+++ b/hazelcast/datadog_checks/hazelcast/data/metrics.yaml
@@ -4,7 +4,6 @@ jmx_metrics:
   - include:
       domain: ManagementCenter
       exclude_tags:
-        - name
         - type
       attribute:
         LicenseExpirationTime:
@@ -18,7 +17,6 @@ jmx_metrics:
       type: HazelcastInstance
       exclude_tags:
         - instance
-        - name
         - type
       tags:
         hazelcast_instance: $instance
@@ -37,7 +35,6 @@ jmx_metrics:
       type: HazelcastInstance.PartitionServiceMBean
       exclude_tags:
         - instance
-        - name
         - type
       tags:
         hazelcast_instance: $instance
@@ -59,7 +56,6 @@ jmx_metrics:
       type: HazelcastInstance.ManagedExecutorService
       exclude_tags:
         - instance
-        - name
         - type
       tags:
         hazelcast_instance: $instance
@@ -92,7 +88,6 @@ jmx_metrics:
       type: IMap
       exclude_tags:
         - instance
-        - name
         - type
       tags:
         hazelcast_instance: $instance
@@ -179,7 +174,6 @@ jmx_metrics:
       type: MultiMap
       exclude_tags:
         - instance
-        - name
         - type
       tags:
         hazelcast_instance: $instance
@@ -260,7 +254,6 @@ jmx_metrics:
       type: ReplicatedMap
       exclude_tags:
         - instance
-        - name
         - type
       tags:
         hazelcast_instance: $instance
@@ -326,7 +319,6 @@ jmx_metrics:
       type: Metrics
       exclude_tags:
         - instance
-        - name
         - type
         - tag.*
       tags:
@@ -880,4 +872,131 @@ jmx_metrics:
           metric_type: gauge
         writeQueueSize:
           alias: hazelcast.member.write_queue_size
+          metric_type: gauge
+  # Queue
+  - include:
+      domain: com.hazelcast
+      type: IQueue
+      exclude_tags:
+        - instance
+        - type
+      tags:
+        hazelcast_instance: $instance
+      attribute:
+        localMinAge:
+          alias: hazelcast.iqueue.minimum_age
+          metric_type: gauge
+        localMaxAge:
+          alias: hazelcast.iqueue.maximum_age
+          metric_type: gauge
+        localAverageAge:
+          alias: hazelcast.iqueue.average_age
+          metric_type: gauge
+        localOwnedItemCount:
+          alias: hazelcast.iqueue.owned_item_count
+          metric_type: gauge
+        localBackupItemCount:
+          alias: hazelcast.iqueue.backup_item_count
+          metric_type: gauge
+        localOfferOperationCount:
+          alias: hazelcast.iqueue.offer_operation_count
+          metric_type: gauge
+        localRejectedOfferOperationCount:
+          alias: hazelcast.iqueue.rejected_offer_operation_count
+          metric_type: gauge
+        localPollOperationCount:
+          alias: hazelcast.iqueue.poll_operation_count
+          metric_type: gauge
+        localEmptyPollOperationCount:
+          alias: hazelcast.iqueue.empty_poll_operation_count
+          metric_type: gauge
+        localOtherOperationsCount:
+          alias: hazelcast.iqueue.other_operation_count 
+          metric_type: gauge
+        localEventOperationCount:
+          alias: hazelcast.iqueue.event_operation_count
+          metric_type: gauge
+
+  # Queue
+  - include:
+      domain: com.hazelcast
+      type: IQueue
+      exclude_tags:
+        - instance
+        - type
+      tags:
+        hazelcast_instance: $instance
+      attribute:
+        localMinAge:
+          alias: hazelcast.iqueue.minimum_age
+          metric_type: gauge
+        localMaxAge:
+          alias: hazelcast.iqueue.maximum_age
+          metric_type: gauge
+        localAverageAge:
+          alias: hazelcast.iqueue.average_age
+          metric_type: gauge
+        localOwnedItemCount:
+          alias: hazelcast.iqueue.owned_item_count
+          metric_type: gauge
+        localBackupItemCount:
+          alias: hazelcast.iqueue.backup_item_count
+          metric_type: gauge
+        localOfferOperationCount:
+          alias: hazelcast.iqueue.offer_operation_count
+          metric_type: gauge
+        localRejectedOfferOperationCount:
+          alias: hazelcast.iqueue.rejected_offer_operation_count
+          metric_type: gauge
+        localPollOperationCount:
+          alias: hazelcast.iqueue.poll_operation_count
+          metric_type: gauge
+        localEmptyPollOperationCount:
+          alias: hazelcast.iqueue.empty_poll_operation_count
+          metric_type: gauge
+        localOtherOperationsCount:
+          alias: hazelcast.iqueue.other_operation_count 
+          metric_type: gauge
+        localEventOperationCount:
+          alias: hazelcast.iqueue.event_operation_count
+          metric_type: gauge
+
+  # ReliableTopic
+  - include:
+      domain: com.hazelcast
+      type: ReliableTopic
+      exclude_tags:
+        - instance
+        - type
+      tags:
+        hazelcast_instance: $instance
+      attribute:
+        localCreationTime:
+          alias: hazelcast.reliabletopic.creation_time
+          metric_type: gauge
+        localPublishOperationCount:
+          alias: hazelcast.reliabletopic.publish_operation_count
+          metric_type: gauge
+        localReceiveOperationCount:
+          alias: hazelcast.reliabletopic.receive_operation_count
+          metric_type: gauge
+
+  # Topic
+  - include:
+      domain: com.hazelcast
+      type: ITopic
+      exclude_tags:
+        - instance
+        - type
+      tags:
+        hazelcast_instance: $instance
+      attribute:
+        localCreationTime:
+          alias: hazelcast.topic.creation_time
+          metric_type: gauge
+        localPublishOperationCount:
+          alias: hazelcast.topic.publish_operation_count
+          metric_type: gauge
+        localReceiveOperationCount:
+          alias: hazelcast.topic.receive_operation_count
           metric_type: gauge
