--- a/teleport/manifest.json
+++ b/teleport/manifest.json
@@ -32,7 +32,12 @@
       },
       "metrics": {
         "prefix": "teleport.",
-        "check": "",
+        "check": [
+            "teleport.common.process.state",
+            "teleport.common.rx",
+            "teleport.common.tx",
+            "teleport.common.teleport.build_info"
+        ],
         "metadata_path": "metadata.csv"
       },
       "service_checks": {
