--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -397,6 +397,8 @@ files:
                     properties:
                       - name: volumes
                         type: object
+                      - name: transfers
+                        type: object
               - name: baremetal
                 anyOf:
                   - type: boolean
