--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -399,6 +399,8 @@ files:
                         type: object
                       - name: transfers
                         type: object
+                      - name: snapshots
+                        type: object
               - name: baremetal
                 anyOf:
                   - type: boolean
