--- a/esxi/datadog_checks/esxi/data/conf.yaml.example
+++ b/esxi/datadog_checks/esxi/data/conf.yaml.example
@@ -39,6 +39,21 @@ instances:
     #
     # use_guest_hostname: false
 
+    ## @param collect_per_instance_filters - mapping - optional
+    ## Use this option to collect metrics tagged with instance values.
+    ## Some ESXi metrics can be tagged with instance values.
+    ## For each resource type (vm, host) to collect,
+    ## you can choose which metrics you want to collect the instance value as tags using a list of regex.
+    ## See https://github.com/DataDog/integrations-core/blob/master/esxi/datadog_checks/esxi/metrics.py
+    ## for the list of collected metrics (do not prefix them with `esxi`)
+    ## /!\ Use with parsimony, collecting per-instance metrics might be very expensive for big environments.
+    #
+    # collect_per_instance_filters:
+    #   vm:
+    #   - <VM_REGEX>
+    #   host:
+    #   - <HOST_REGEX>
+
     ## @param tags - list of strings - optional
     ## A list of tags to attach to every metric and service check emitted by this instance.
     ##
