--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -50,6 +50,7 @@ datadog-ecs-fargate==4.3.0
 datadog-eks-fargate==4.2.0
 datadog-elastic==6.3.0
 datadog-envoy==3.4.0
+datadog-esxi==1.0.0
 datadog-etcd==6.2.0
 datadog-exchange-server==2.1.0; sys_platform == 'win32'
 datadog-external-dns==3.2.0
