--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -161,6 +161,7 @@ datadog-system-swap==1.18.0
 datadog-tcp-check==4.8.0
 datadog-teamcity==4.2.0
 datadog-tekton==1.0.0
+datadog-teleport==1.0.0
 datadog-temporal==2.2.0
 datadog-tenable==1.5.0
 datadog-teradata==2.2.0; sys_platform != 'darwin'
