--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -165,6 +165,9 @@ manifest.json         @DataDog/documentation @DataDog/agent-integrations
 /openstack_controller/manifest.json     @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /openstack_controller/*.md              @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /openstack_controller/assets/logs/      @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation @DataDog/logs-backend
+/teleport/                              @DataDog/platform-integrations @DataDog/agent-integrations
+/teleport/manifest.json                 @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
+/teleport/*.md                          @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /vsphere/                               @DataDog/platform-integrations @DataDog/agent-integrations
 /vsphere/manifest.json                  @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /vsphere/*.md                           @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
