--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -50,6 +50,7 @@ datadog-ecs-fargate==4.3.0
 datadog-eks-fargate==4.2.0
 datadog-elastic==6.3.0
 datadog-envoy==3.4.0
+datadog-esxi==1.0.0
 datadog-etcd==6.2.0
 datadog-exchange-server==2.1.0; sys_platform == 'win32'
 datadog-external-dns==3.2.0
@@ -160,6 +161,7 @@ datadog-system-swap==1.18.0
 datadog-tcp-check==4.8.0
 datadog-teamcity==4.2.0
 datadog-tekton==1.0.0
+datadog-teleport==1.0.0
 datadog-temporal==2.2.0
 datadog-tenable==1.5.0
 datadog-teradata==2.2.0; sys_platform != 'darwin'
