--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -606,7 +606,12 @@ files:
                   - type: object
                     properties:
                       - name: images
-                        type: boolean
+                        anyOf:
+                          - type: boolean
+                          - type: object
+                            properties:
+                              - name: tasks
+                                type: boolean
             example:
               compute: false
         - name: projects
