--- a/weaviate/manifest.json
+++ b/weaviate/manifest.json
@@ -8,7 +8,7 @@
     "configuration": "README.md#Setup",
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
-    "description": "Weaviate",
+    "description": "Open-source vector database for building AI-powered applications.",
     "title": "Weaviate",
     "media": [],
     "classifier_tags": [
