--- a/mysql/hatch.toml
+++ b/mysql/hatch.toml
@@ -29,11 +29,12 @@ replication = ["group"]
 python = ["3.11"]
 flavor = ["mariadb"]
 version = [
-  "10.2",  # EOL 23 May 2022
-  "10.5",  # EOL 24 June 2025
-  "10.8",
-  "10.9",
-  "10.11",
+  "10.2",  # EOL 23 May 2022 (ended)
+  "10.5",  # EOL 24 June 2025 (LTS version)
+  "10.6",  # EOL 06 July 2026 (LTS version)
+  "10.8",  # EOL 20 May 2023 (ended)
+  "10.9",  # EOL 22 Aug 2023 (ended)
+  "10.11", # EOL 16 Feb 2028 (LTS version)
 ]
 
 [envs.default.overrides]
