--- a/confluent_platform/datadog_checks/confluent_platform/data/metrics.yaml
+++ b/confluent_platform/datadog_checks/confluent_platform/data/metrics.yaml
@@ -1603,8 +1603,12 @@ jmx_metrics:
   #   - Confluent Streams Thread: https://docs.confluent.io/current/streams/monitoring.html#built-in-metrics
   - include:
       domain: kafka.streams
-      bean_regex: kafka\.streams:type=stream-metrics,client-id=.*
+      bean_regex: kafka\.streams:type=stream-thread-metrics,thread-id=.*
       attribute:
+        blocked-time-ns-total:
+          # The total time the Kafka Streams thread spent blocked on Kafka since it was started, in nanoseconds (ns).
+          alias: confluent.$domain.stream.$attribute
+          metric_type: gauge
         commit-latency-avg:
           # The average value of commit-latency.
           alias: confluent.$domain.stream.$attribute
