--- a/vsphere/assets/configuration/spec.yaml
+++ b/vsphere/assets/configuration/spec.yaml
@@ -292,6 +292,38 @@ files:
           display_default: ['vm', 'host']
           items:
             type: string
+      - name: include_events
+        description: |
+          The events that should be collected by the vSphere integration.
+
+          The "event" specifies the event type you want to include, and the "excluded_messages" is a list of
+          messages of that event type you do not want to collect. For example, if the key
+          is 'AlarmStatusChangedEvent' and the values for this key are 'Gray to Green' and 'Green to Gray',
+          then all events named 'AlarmStatusChangedEvent' that don't have the message 'Gray to Green'
+          and 'Green to Gray' will be included.
+          
+          Currently, events can only be collected from the following resources:
+          VMs, hosts, datacenters, datastores, and clusters.
+
+          The default events reported are listed here:
+          https://github.com/DataDog/integrations-core/tree/master/vsphere#events
+
+        value:
+          example:
+            - event: <EVENT_NAME_TO_INCLUDE>
+              excluded_messages:
+                - <EVENT_MESSAGE_REGEX_CORRESPONDING_TO_EVENT_NAME_TO_EXCLUDE_1>
+                - <EVENT_MESSAGE_REGEX_CORRESPONDING_TO_EVENT_NAME_TO_EXCLUDE_2>
+          type: array
+          items:
+            type: object
+            properties:
+              - name: event
+                type: string
+                name: excluded_messages
+                type: array
+                items:
+                  type: string
       - name: collect_tags
         description: |
           If true, the vSphere Tags will be collected.
