--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -16,10 +16,10 @@ manifest.json         @DataDog/documentation @DataDog/agent-integrations
 **/assets/logs        @DataDog/logs-backend @DataDog/documentation @DataDog/agent-integrations
 
 # Dependencies
-/.deps/                            @DataDog/agent-integrations @DataDog/agent-build-and-releases
-/.builders/                        @DataDog/agent-build-and-releases
-/.builders/images/                 @DataDog/agent-integrations @DataDog/agent-build-and-releases
-/.builders/patches/                @DataDog/agent-integrations @DataDog/agent-build-and-releases
+/.deps/                            @DataDog/agent-integrations @DataDog/agent-delivery
+/.builders/                        @DataDog/agent-delivery
+/.builders/images/                 @DataDog/agent-integrations @DataDog/agent-delivery
+/.builders/patches/                @DataDog/agent-integrations @DataDog/agent-delivery
 
 # Checks base
 /datadog_checks_base/                                          @DataDog/agent-integrations
@@ -306,7 +306,7 @@ datadog_checks_base/datadog_checks/base/checks/windows/              @DataDog/wi
 docs/developer/process/integration-release.md                         @DataDog/software-integrity-and-trust @DataDog/agent-integrations @trishankatdatadog
 # As well as the pipelines.
 /.github/workflows/                                                   @DataDog/agent-integrations
-/.github/workflows/build-deps.yml                                     @DataDog/agent-build-and-releases
+/.github/workflows/build-deps.yml                                     @DataDog/agent-delivery
 /.gitlab-ci.yml                                                       @DataDog/agent-integrations
 /.gitlab/software_composition_analysis.yaml                           @DataDog/software-integrity-and-trust
 # Dev container
