--- a/mongo/assets/configuration/spec.yaml
+++ b/mongo/assets/configuration/spec.yaml
@@ -89,6 +89,64 @@ files:
           type: string
         example:
           [ one_database, other_database ]
+    - name: database_autodiscovery
+      description: |
+        Define the configuration for database autodiscovery.
+        Complete this section if you want to auto-discover databases on this MongoDB instance.
+      options:
+        - name: enabled
+          description: Enable database autodiscovery.
+          value:
+            type: boolean
+            example: false
+            display_default: false
+        - name: max_databases
+          description: The maximum number of databases this host should monitor.
+          value:
+            type: integer
+            example: 100
+            display_default: 100
+        - name: include
+          description: |
+            Regular expression for database names to include as part of
+            database autodiscovery.
+            Will report metrics for databases that are found in this instance,
+            ignores databases listed but not found.
+            Character casing is ignored. The regular expressions start matching from
+            the beginning, so to match anywhere, prepend `.*`. For exact matches append `$`.
+            Defaults to `.*` to include everything.
+          value:
+            type: array
+            items:
+              type: string
+            example:
+              - "mydatabase$"
+              - "orders.*"
+            display_default:
+              - ".*"
+        - name: exclude
+          description: |
+            Regular expression for database names to exclude as part of `database_autodiscovery`.
+            Character casing is ignored. The regular expressions start matching from the beginning,
+            so to match anywhere, prepend `.*`. For exact matches append `$`.
+            In case of conflicts, database exclusion via `exclude` takes precedence over
+            those found via `include`
+          value:
+            type: array
+            items:
+              type: string
+            example:
+              - "config"
+              - "local"
+            display_default:
+              - "config"
+              - "local"
+        - name: refresh_interval
+          description: Frequency in seconds of scans for new databases. Defaults to 10 minutes.
+          value:
+            type: integer
+            example: 600
+            display_default: 600
     - name: dbm
       description: |
         Set to `true` enable Database Monitoring.
