--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -423,6 +423,8 @@ integration/solr:
 - solr/**/*
 integration/sonarqube:
 - sonarqube/**/*
+integration/sophos_central_cloud:
+- sophos_central_cloud/**/*
 integration/spark:
 - spark/**/*
 integration/sqlserver:
