--- a/ping_one/manifest.json
+++ b/ping_one/manifest.json
@@ -21,7 +21,7 @@
         "integration": {
             "auto_install": false,
             "source_type_id": 18081106,
-            "source_type_name": "ping_one",
+            "source_type_name": "PingOne",
             "events": {
                 "creates_events": false
             },
