--- a/mimecast/manifest.json
+++ b/mimecast/manifest.json
@@ -9,7 +9,7 @@
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
     "description": "Gain insights into Mimecast logs.",
-    "title": "Mimecast",
+    "title": "mimecast",
     "media": [],
     "classifier_tags": [
       "Category::Log Collection",
