--- a/ping_one/manifest.json
+++ b/ping_one/manifest.json
@@ -27,7 +27,7 @@
         "integration": {
             "auto_install": false,
             "source_type_id": 18081106,
-            "source_type_name": "ping-one",
+            "source_type_name": "PingOne",
             "events": {
                 "creates_events": false
             },
